新增 CLAUDE.md 文档，提供项目概述、开发命令、架构设计及代码标准等指导信息；更新 pubspec.yaml 和 pubspec.lock 文件，升级相关依赖版本；新增 VSCode 设置文件以支持拼写检查；优化 StorageManager 类的代码格式。

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   intl: any
+  auto_route: ^9.3.0+1
 
 dev_dependencies:
   flutter_test:
@@ -43,8 +44,8 @@ dev_dependencies:
   flutter_lints: ^3.0.0
   
   # 代码生成
-  auto_route_generator: ^7.3.2
-  build_runner: ^2.4.7
+  auto_route_generator: ^9.0.0
+  build_runner: ^2.5.4
   hive_generator: ^2.0.1
   json_annotation: ^4.8.1
   json_serializable: ^6.7.1
